@@ -31,7 +31,7 @@ $modx->setLogTarget(XPDO_CLI_MODE ? 'ECHO' : 'HTML');
 
 /* set package info */
 define('PKG_NAME','getresources');
-define('PKG_VERSION','1.5.2');
+define('PKG_VERSION','1.6.0');
 define('PKG_RELEASE','dev');
 
 /* load builder */
