@@ -1,7 +1,7 @@
 --------------------
 Snippet: getResources
 --------------------
-Version: 1.5.1-pl
+Version: 1.6.0-dev
 Released: August 23, 2012
 Since: December 28, 2009
 Author: Jason Coward <jason@modx.com>
